deps/jansson/test/suites/invalid/object-unterminated-value/error.strip
1 7 7
premature end of input near '"a'
